<resources>
    <string name="app_name">TravelTimeOrganizer</string>
    <string name="no_info_home_add_trip_btn_description">Добави</string>
    <string name="no_trips">Няма пътувания</string>
    <string name="choose_from_map">Избери от картата</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="right_on_time">Точно навреме</string>
    <string name="save">Запази</string>
    <string name="when">Кога</string>
    <string name="minutes_short">мин</string>
    <string name="choose_location">Изберете локация</string>
    <string name="use_my_location">Използвай моето местоположение</string>
    <string name="choose">Избери</string>
    <string name="delete_trip_popup_text">Сигурни ли сте, че искате да изтриете това пътуване?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="periodically">Периодично</string>
    <string name="one_time">Еднократно</string>
    <string name="monday_first_letter">П</string>
    <string name="tuesday_first_letter">В</string>
    <string name="wednesday_first_letter">С</string>
    <string name="thursday_first_letter">Ч</string>
    <string name="friday_first_letter">П</string>
    <string name="saturday_first_letter">С</string>
    <string name="sunday_first_letter">Н</string>
    <string name="delete">Изтрий</string>
    <string name="add_trip">Добави пътуване</string>
</resources>