<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tripInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_edges_white_container"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp"
    android:weightSum="1"
    android:layout_marginBottom="25dp"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/routeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/dayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/monday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/tuesday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/wed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/wednesday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/thu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/thursday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/fri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/friday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/saturday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/sunday_first_letter"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/tripInfoSwitch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

